# hddm-wfpt

./: .gitignore  Readme.rst  build.py  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
hddm_wfpt/: __init__.py  cddm_data_simulation.cpp  cdfdif_wrapper.c  wfpt.cpp  wfpt.pyx
notebooks/: test_regression_wfpt.ipynb
