[tool.poetry]
name = "hddm-wfpt"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "BSD-2-Clause"
packages = [
    { include = "hddm_wfpt", from = "." }
]
build = "build.py"

[tool.poetry.dependencies]
python = "^3.9"
Cython = "^0.29.32"
numpy = "^1.21.6"
scipy = "^1.9.1"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.2.0", "cython", "setuptools"]
build-backend = "poetry.core.masonry.api"
